--- a/html/assets/css/footer.css
+++ b/html/assets/css/footer.css
@@ -9,7 +9,7 @@
 .fa {
   padding: 20px;
   font-size: 30px;
-  width: 50px;
+  width: 60px;
   text-align: center;
   text-decoration: none;
   margin: 5px 2px;
